<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:gravity="top"
    android:longClickable="false"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    android:textAlignment="viewEnd" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="gone">

        <Spinner
            android:id="@+id/spnPCSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnDiscover"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:layout_toStartOf="@id/btnDiscover"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnDiscover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@mipmap/ic_refresh"
            android:onClick="btnDiscoverServersClicked" />
    </RelativeLayout>

   <RelativeLayout
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.49"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/txtShutDonwIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:layout_below="@+id/txtStatus"
            android:layout_marginTop="30dp"
            android:text="@string/shutdownDelay" />

        <TextView
            android:id="@+id/txtShutDownInValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtShutDonwIn"
            android:layout_alignBottom="@+id/txtShutDonwIn"
            android:layout_marginLeft="19dp"
            android:layout_toRightOf="@+id/txtShutDonwIn"
            android:clickable="true"
            android:onClick="txtShutDownInValueClicked"
            android:text="Dummy2" />

        <TextView
            android:id="@+id/txtStatusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtShutDonwIn"
            android:layout_alignLeft="@+id/txtShutDownInValue"
            android:text="Dummy" />

        <TextView
            android:id="@+id/txtMAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtShutDonwIn"
            android:layout_below="@+id/txtShutDonwIn"
            android:paddingTop="30dp"
            android:text="@string/MAC" />

        <TextView
            android:id="@+id/txtMACValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtMAC"
            android:layout_alignLeft="@+id/txtShutDownInValue"
            android:text="Dummy3" />

       <TextView
           android:id="@+id/txtIP"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/txtShutDonwIn"
           android:layout_below="@+id/txtMACValue"
           android:layout_marginTop="30dp"
           android:text="@string/IP" />

       <TextView
           android:id="@+id/txtIPValue"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/txtIP"
           android:layout_alignLeft="@+id/txtShutDownInValue"
           android:text="Dummy4" />

        <Button
            android:id="@+id/btnCancelShutdown"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtShutDownInValue"
            android:layout_alignBottom="@+id/txtShutDownInValue"
            android:layout_alignParentRight="true"
            android:minHeight="24dp"
            android:onClick="btnCancelShutdownClicked"
            android:text="@string/btnCancelShutdown" />

        <Button
            android:id="@+id/btnWakeUp"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtStatusValue"
            android:layout_alignParentRight="true"
            android:minHeight="24dp"
            android:onClick="btnWakeUpClicked"
            android:text="@string/btnWakeUp" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtShutDonwIn"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:text="@string/status" />
   </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noWifiLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" >
        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/txtWarnWifiDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:inputType="textMultiLine"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/warnWifiDisabled" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/emptyModelLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/txtEmptyModel"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:inputType="textMultiLine"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/emptyModel" />
        <ImageButton
            android:id="@+id/btnDiscoverEmptyModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@mipmap/ic_refresh"
            android:onClick="btnDiscoverServersClicked" />
    </RelativeLayout>
</LinearLayout>